--- a/my-first-notebook.ipynb
+++ b/my-first-notebook.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# First Python Notebook\n",
+    "\n",
+    "Hello world!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {
@@ -9,6 +18,13 @@
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import propositions and contributors tables."
    ]
   },
   {
@@ -485,6 +501,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some early data on the tables."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {},
@@ -860,8 +883,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Info on proposition 64. This was later changed to proposition 67 but the name remained. Note: Could better be done "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 104,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "prop64 = props[props.prop_name == \"PROPOSITION 067- REFERENDUM TO OVERTURN BAN ON SINGLE-USE PLASTIC BAGS.\"]"
@@ -7260,7 +7296,9 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "others = merged[merged.contributor_state != \"CA\"]"
@@ -7387,7 +7425,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "merged.groupby(\"committee_name_x\").committee_name_x.count().sort_values()"
